[gd_scene load_steps=4 format=2]

[ext_resource path="res://Character/Player/FlashAnimation.tscn" type="PackedScene" id=1]
[ext_resource path="res://Character/Player/PlayerGun.gd" type="Script" id=2]
[ext_resource path="res://Character/Player/Texture/Gun.png" type="Texture" id=3]

[node name="Gun" type="Node2D"]
use_parent_material = true
script = ExtResource( 2 )

[node name="GunSprite" type="Sprite" parent="."]
use_parent_material = true
texture = ExtResource( 3 )
offset = Vector2( 5, 0 )

[node name="Muzzel" type="Node2D" parent="."]
use_parent_material = true

[node name="MuzzelPosition" type="Position2D" parent="Muzzel"]
use_parent_material = true
position = Vector2( 13, 0 )

[node name="FlashAnimation" parent="Muzzel" instance=ExtResource( 1 )]
use_parent_material = true

[node name="ReloadTime" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="ReloadTime" to="." method="_on_MagRefillCooldown_timeout"]
